Use git hash for aremi-web-utils

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,11 @@
 flags: {}
 packages:
 - '.'
-- ../aremi-web-utils/
+# - ../aremi-web-utils
+- location:
+    git: https://github.inside.nicta.com.au/AREMI/aremi-web-utils.git
+    # No tags yet
+    commit: e14c3f05f21a35f000b75ece8a110904c4b751f4
 extra-deps:
 - time-units-1.0.0
 - lens-datetime-0.2.1
