--- a/stack.yaml
+++ b/stack.yaml
@@ -10,5 +10,6 @@ extra-deps:
 - wai-util-0.8
 - http-accept-0.2
 - hslogger-template-2.0.3
+- servant-blaze-0.4.4.5
 resolver: lts-3.14
 local-bin-path: dist
