--- a/apvi-webservice.cabal
+++ b/apvi-webservice.cabal
@@ -55,6 +55,7 @@ executable apvi-webservice
   -- Modules included in this executable, other than Main.
   other-modules:     APVI.LiveSolar
                      , APVI.Docs
+                     , APVI.Types
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
