Add optional EKG based monitoring, with config changes and docs for how to use it.

--- a/config/apvi-webservice.conf
+++ b/config/apvi-webservice.conf
@@ -1,5 +1,9 @@
 port = 3000
 
+# If either of the following do not exist, monitoring will be disabled.
+# monitoring-port = 8000
+# monitoring-hostname = "localhost"
+
 all-log = "all.log"
 access-log = "access.log"
 
