--- a/apvi-webservice.cabal
+++ b/apvi-webservice.cabal
@@ -50,7 +50,7 @@ executable apvi-webservice
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:         -threaded -with-rtsopts=-I1
+  ghc-options:         -threaded -with-rtsopts=-TI1
 
   -- Modules included in this executable, other than Main.
   other-modules:     APVI.LiveSolar
@@ -96,6 +96,8 @@ executable apvi-webservice
                        , markdown         >= 0.1.13 && < 0.2
                        , blaze-html       >= 0.8 && < 0.9
                        , here             >= 1.2 && < 1.3
+                       , ekg              >= 0.4 && < 0.5
+                       , wai-middleware-metrics >= 0.2 && < 0.3
 
   -- Directories containing source files.
   hs-source-dirs:      src
