--- a/apvi-webservice.cabal
+++ b/apvi-webservice.cabal
@@ -50,7 +50,7 @@ executable apvi-webservice
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:         -threaded -with-rtsopts=-TI1
+  ghc-options:         -threaded "-with-rtsopts=-T -I1"
 
   -- Modules included in this executable, other than Main.
   other-modules:     APVI.LiveSolar
