--- a/apvi-webservice.cabal
+++ b/apvi-webservice.cabal
@@ -36,14 +36,14 @@ maintainer:          Alex.Mason@nicta.com.au
 
 category:            Web
 
-build-type:          Simple
+build-type:          Custom
 
 -- Extra files to be distributed with the package, such as examples or a
 -- README.
 extra-source-files:  README.md
 
 -- Constraint on the version of Cabal needed to build this package.
-cabal-version:       >=1.18
+cabal-version:       >=1.22
 
 
 executable apvi-webservice
@@ -56,6 +56,7 @@ executable apvi-webservice
   other-modules:     APVI.LiveSolar
                      , APVI.Docs
                      , APVI.Types
+                     , PkgInfo_apvi_webservice
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
@@ -89,14 +90,14 @@ executable apvi-webservice
                        , wai-util         >= 0.7 && < 0.9
                        , wai-extra        >= 3.0 && < 3.1
                        , either           >= 4.3 && < 5.0
-                       , configurator     >= 0.3 && < 1.0
-                       , aremi-web-utils  >= 0.9.1.1 && < 1.0
+                       , aremi-web-utils  >= 0.10.0.3 && < 1.0
                        , servant-docs     >= 0.4.4 && < 0.5
                        , servant-blaze    >= 0.4.4 && < 0.5
                        , blaze-html       >= 0.8 && < 0.9
                        , here             >= 1.2 && < 1.3
                        , ekg              >= 0.4 && < 0.5
                        , wai-middleware-metrics >= 0.2 && < 0.3
+                       , configuration-tools >= 0.2.14 && < 0.3
 
   -- Directories containing source files.
   hs-source-dirs:      src
