--- a/apvi-webservice.cabal
+++ b/apvi-webservice.cabal
@@ -5,9 +5,9 @@ name:                apvi-webservice
 -- for standards guiding when and how versions should be incremented.
 -- http://www.haskell.org/haskellwiki/Package_versioning_policy
 -- PVP summary:      +-+------- breaking API changes
---                   | | +----- non-breaking API additions
---                   | | | +--- code changes with no API change
-version:             0.9.1.2
+--                   | |  +----- non-breaking API additions
+--                   | |  | +--- code changes with no API change
+version:             0.10.0.0
 
 -- A short (one-line) description of the package.
 synopsis:            A simple web service for showing live PV data from APVI
@@ -50,7 +50,7 @@ executable apvi-webservice
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:         -threaded "-with-rtsopts=-T -I1"
+  ghc-options:         -threaded "-with-rtsopts=-T -I1 -N"
 
   -- Modules included in this executable, other than Main.
   other-modules:     APVI.LiveSolar
